# Pratice_Cmake

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/preamble/: test_lib_calc.cc.514003A9EBA5AA05.preamble
.github/workflows/: buildRunTestWorkflow.yml  commonFuncTest.yml
.github/workflows/testRunner/: runGTests.sh  runMain.sh
app/: main.c
apps/: CMakeLists.txt  main.c
apps/src/: CMakeLists.txt  lib_calc.c
apps/test/: CMakeLists.txt  test_lib_calc.cc
doc/: basicStructure.md  basicStructure.txt
include/calc/: lib_calc.h
scripts/: helper.py
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_lib_calc.cc
